Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
       <header>
         <h1>Computer Vision-Based 3-D Scanning for Object Replication</h1>
-        <p>a 3-D scanner for the Microsoft Kinect</p>
+        <p>Rutgers ECE Senior Capstone Design - Spring 2013</p>
       </header>
 
       <div id="banner">
